--- a/theme.html
+++ b/theme.html
@@ -5,6 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap-responsive.css">
+	<link rel="stylesheet" type="text/css" href="css/bootstrap-rtl.css">
+	<link rel="stylesheet" type="text/css" href="css/bootstrap-responsive-rtl.css">
 	<!--[if lt IE 9]>
 <script src="dist/html5shiv.js"></script>
 <![endif]-->
